# python_project_template

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
.github/workflows/: lint-and-test.yml  lint_and_test.yml  publish-release-build.yml  pylint.yml
_assets/: extra.css
docs/: index.md  reference_manual.md
python_project_template/: __init__.py
reference_manual/: index.html
scripts/: build_wheel_package.bat  deploy_docs_to_github.bat  run_pytests.bat  run_pytests_with_report.bat  venv_setup.bat
search/: search_index.json
src_manual/: index.html
tests/: test_my_package.py  test_python_project_template.py
